# hubble-chatbot-backend

./: .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  answer_service.py  db.py  embedding_service.py  hubble.db-shm  hubble.db-wal  main.py  pyproject.toml  rag_system.py  requirements.txt  schemas.py  settings.py  start.sh  test_classification.py  vector_store.py
.github/workflows/: deploy.yml
chroma_db/: chroma.sqlite3
docs/: Endorsement Process.csv  README.md
src/: config.py
src/api/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  data_processor.py
src/models/: __init__.py  api_schemas.py  schemas.py
src/services/: __init__.py  answer_service.py  database_service.py  document_processor.py  embedding_service.py  question_classifier.py  rag_system.py  vector_store.py
static/: index.html  ws.html
tests/: test_system.py
ws/: __init__.py  manager.py  routes.py  upstream.py
