[project]
name = "hubble-chatbot-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "fastapi[all]>=0.117.1",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.0",
    "markitdown[all]>=0.1.3",
    "pydantic-settings>=2.11.0",
    "tiktoken>=0.8.0",
    "uvicorn[standard]>=0.30.5",
    "websockets>=12.0",
]
